# src/modules/project/projectRoutes.js
@@ -1,6 +1,6 @@
 const express = require("express");
 const { authenticate } = require("../../middleware/auth");
-const { createProject, addDeliverable, getProjects, getProjectStats, getClientProject, generateClientLink, getProjectById, editDeliverable, getProjectEditInfo, deleteDeliverable, editProjectBasicInfo, deleteProject, sendConfirmationOTP, resendConfirmationOTP, confirmProject, submitDeliverable, clientApproveDeliverable } = require("./projectController");
+const { createProject, addDeliverable, getProjects, getProjectStats, getClientProject, generateClientLink, getProjectById, editDeliverable, getProjectEditInfo, deleteDeliverable, editProjectBasicInfo, deleteProject, sendConfirmationOTP, resendConfirmationOTP, confirmProject, submitDeliverable, clientApproveDeliverable, clientRequestRevision } = require("./projectController");
 
 
 const projectRouter = express.Router()
@@ -10,7 +10,8 @@ projectRouter.get("/client/:token", getClientProject)
 projectRouter.post("/client/:token/send-otp", sendConfirmationOTP)
 projectRouter.post("/client/:token/resend-otp", resendConfirmationOTP);
 projectRouter.post("/client/:token/confirm", confirmProject);
-projectRouter.post("/client/:token/:index/approve",clientApproveDeliverable)
+projectRouter.post("/client/:token/deliverable/:deliverableId/approve",clientApproveDeliverable);
+projectRouter.post("/client/:token/deliverable/:deliverableId/request-revision", clientRequestRevision)
  
 
 projectRouter.use(authenticate);
@@ -23,10 +24,10 @@ projectRouter.get("/stats", getProjectStats);
 projectRouter.post("/:projectId/generate-link", generateClientLink);
 projectRouter.put("/:projectId", editProjectBasicInfo);
 projectRouter.get("/:projectId/edit", getProjectEditInfo)
-projectRouter.put("/:projectId/deliverable/:index", editDeliverable)
-projectRouter.delete("/:projectId/deliverable/:index", deleteDeliverable); 
+projectRouter.put("/:projectId/deliverable/:deliverableId", editDeliverable)
+projectRouter.delete("/:projectId/deliverable/:deliverableId", deleteDeliverable); 
 projectRouter.delete("/:projectId", deleteProject);
-projectRouter.post("/:projectId/deliverable/:index/submit", submitDeliverable)
+projectRouter.post("/:projectId/deliverable/:deliverableId/submit", submitDeliverable)
 
 
 
